--- a/Classroom/Views/Index/TasksInGroup.cshtml
+++ b/Classroom/Views/Index/TasksInGroup.cshtml
@@ -12,6 +12,7 @@
     {
 <div class="whiteSpace">
     <h2 class="centerText">@Model.group.Name</h2>
+    <h5 class="centerText">Ідентифікатор:@Model.group.Id</h5>
     <div class="flex"><p class="textWrap description">@Model.group.Description</p></div>
     <hr class="spliter" />
     <h4 class="centerText">Завдання</h4>
@@ -41,8 +42,9 @@
     {
 <div class="whiteSpace">
     <h2 class="centerText">@Model.group.Name</h2>
+    <h5 class="centerText">Ідентифікатор:@Model.group.Id</h5>
     <div class="flex"><p class="textWrap description">@Model.group.Description</p></div>
-    <hr class="spliter"/>
+    <hr class="spliter" />
     <h4 class="centerText">Завдання</h4>
     <div class="flex spaceBetween menuBlock">
         <div class=" flex leftMenuBlock"></div>
