--- a/Classroom/Views/Index/Task.cshtml
+++ b/Classroom/Views/Index/Task.cshtml
@@ -83,7 +83,14 @@
                     <div class="flex spaceBetween menuBlock" style="width:100%">
                         <div class=" flex leftMenuBlock" style="width:20%">
                             <div class="margin-right13px margin-left30px">
-                                <span>@r.Mark:</span>
+                                @if (r.Mark != null)
+                                {
+                                    <span>Оцінка:@r.Mark</span>
+                                }
+                                else
+                                {
+                                    <span>Оцінки поки не має</span>
+                                }
                             </div>
                         </div>
                         <div class="rightMenuBlock margin-right30px flex" style="width:80%">
@@ -171,7 +178,14 @@
                     <div class="flex spaceBetween menuBlock" style="width:100%">
                         <div class=" flex leftMenuBlock" style="width:20%">
                             <div class="margin-right13px margin-left30px">
-                                <span>@r.Mark:</span>
+                                @if (r.Mark != null)
+                                {
+                                <span>Оцінка:@r.Mark</span>
+                                }
+                        else
+                        {
+                            <span>Оцінки поки не має</span>
+                        }
                             </div>
                         </div>
                     </div> 
