--- a/Classroom/Views/Index/Task.cshtml
+++ b/Classroom/Views/Index/Task.cshtml
@@ -89,7 +89,7 @@
                                 }
                                 else
                                 {
-                                    <span>Оцінки поки не має</span>
+                                    <span>Оцінка: не виставвлена</span>
                                 }
                             </div>
                         </div>
@@ -184,7 +184,7 @@
                                 }
                         else
                         {
-                            <span>Оцінки поки не має</span>
+                                    <span>Оцінка: не виставвлена</span>
                         }
                             </div>
                         </div>
